--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
   <!-- Loading my favicon -->
   <link rel="apple-touch-icon"
         sizes="180x180" 
-        href="/apple-touch-icon.png">
+        href="assets/apple-touch-icon.png">
   <link rel="icon"
         type="image/png" 
         sizes="32x32" 
-        href="/favicon-32x32.png">
+        href="assets/favicon-32x32.png">
   <link rel="icon"
         type="image/png" 
         sizes="16x16" 
-        href="/favicon-16x16.png">
+        href="assets/favicon-16x16.png">
   <link rel="manifest"
-        href="/site.webmanifest">
+        href="assets/site.webmanifest">
   <!-- Load Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:900|Merriweather&display=swap" rel="stylesheet">  <!-- Load Styles -->
   <link href="css/styles.css" rel="stylesheet">
